force-app/main/default/objects/Sales_Volume__c/Sales_Volume__c.object-meta.xml
<CustomObject>
    <description>The volume of Zimmer product sales to a healthcare facility (Replaced with Sales Unit object for Japan)</description>
    <label>Sales Volume</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Sales Volume Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Volumes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>