force-app/main/default/objects/Sales_Volume__c/fields/BHP_Cup__c.field-meta.xml
<CustomField>
    <fullName>BHP_Cup__c</fullName>
    <label>BHP_Cup</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>