force-app/main/default/objects/Sales_Volume__c/fields/HealthcareFacility__c.field-meta.xml
<CustomField>
    <fullName>HealthcareFacility__c</fullName>
    <label>Healthcare Facility</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Volume</relationshipLabel>
    <relationshipName>R00N80000002hQ0EEAU</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>