force-app/main/default/objects/Sales_Volume__c/fields/THA_Cup__c.field-meta.xml
<CustomField>
    <fullName>THA_Cup__c</fullName>
    <label>THA_Cup</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>