force-app/main/default/objects/Sales_Volume__c/fields/Total_Femoral__c.field-meta.xml
<CustomField>
    <fullName>Total_Femoral__c</fullName>
    <label>Total_Femoral</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>