force-app/main/default/objects/Sales_Volume__c/fields/Total_Stem__c.field-meta.xml
<CustomField>
    <fullName>Total_Stem__c</fullName>
    <label>Total_Stem</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>