force-app/main/default/objects/Sales_Volume__c/fields/Uni_Femoral__c.field-meta.xml
<CustomField>
    <fullName>Uni_Femoral__c</fullName>
    <label>Uni_Femoral</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>